--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern-starter",
+  "name": "FastCashMoneyPlus",
   "version": "1.0.0",
-  "description": "Boilerplate project for building Isomorphic apps using React and Redux",
+  "description": "bleh",
   "scripts": {
     "test": "node_modules/.bin/mocha shared/tests/*.spec.js --compilers js:babel-register",
     "test:server": "node_modules/.bin/cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test mocha --compilers js:babel-register --recursive server/tests/**/*.spec.js",
@@ -15,19 +15,7 @@
     "lint": "node_modules/.bin/eslint client server shared"
   },
   "pre-commit": [
-    "lint",
-    "test",
-    "test:server"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hashnode/mern-starter.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Hashnode/mern-starter/issues"
-  },
-  "homepage": "https://github.com/Hashnode/mern-starter#readme",
-  "author": "Prashant Abhishek <prashant.abhishek7g@gmail.com>, Mayank Chandola <imayankchd@gmail.com>, Sandeep Panda <sandeep@hashnode.com>, Syed Fazle Rahman <fazle@hashnode.com>, Alkshendra Maurya <alkshendra@hashnode.com>",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.4.5",
@@ -37,6 +25,7 @@
     "express": "^4.13.4",
     "history": "^1.17.0",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.12.0",
     "mongoose": "^4.3.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -51,6 +40,7 @@
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "6.5.0",
     "babel-plugin-transform-react-inline-elements": "6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "0.2.4",
@@ -58,6 +48,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "clean-css": "^3.4.9",
